--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Welcome</title>
 </head>
 <body>
-$END$
+<h1>Welcome</h1>
+<form id="welcomeForm">
+    <label for="name">Please enter your name:</label>
+    <input type="text" id="name" placeholder="Name"
+           autofocus="true"/>
+    <button type="submit">Submit</button>
+</form>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/welcome.js"></script>
 </body>
 </html>
